--- a/src/locales/langs/zh.json
+++ b/src/locales/langs/zh.json
@@ -211,6 +211,10 @@
       "analysis": "分析页",
       "ecommerce": "电子商务"
     },
+    "user": {
+      "title": "用户",
+      "center": "用户中心"
+    },
     "widgets": {
       "title": "组件中心",
       "iconList": "Icon 图标",
