feat: 修改用户中心

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -219,6 +219,10 @@
       "analysis": "Analysis",
       "ecommerce": "Ecommerce"
     },
+    "user": {
+      "title": "User",
+      "center": "User Center"
+    },
     "widgets": {
       "title": "Components",
       "iconList": "Icon List",
